--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "passport": "^0.4.0",
     "passport-local-mongoose": "^5.0.1",
     "pug": "^2.0.4",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
