--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.16.0",
     "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.0.0",
@@ -16,6 +17,8 @@
     "express-session": "^1.17.0",
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^2.2.1",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
